finished add employee section, added additional fields to hire status modal, updated sass

--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1493,7 +1493,7 @@ html {
 }
 
 .highlightInput{
-    border: 2px solid $highlightInputBorderColor;
+    border: 2px solid $highlightInputBorderColor !important;
 }
 
 //Header styles
