--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -1,136 +1,137 @@
 <!--Linked to people.js through modules and template bindings-->
-       <div class="oj-row oj-cols-nopad">
-        <div class="oj-col oj-sm-12 oj-md-12 oj-lg-12 oj-xl-12">
-            <div id="form-container" class="oj-form">
-               <form data-bind="submit: filteredAllPeople">
-                    <div class="oj-col oj-lg-8 oj-xl-8">
-                        <div class="oj-row">
-                            <div class="searchTitle">
-                                <h4>Search Criteria <a href="#">view all employees</a></h4>
-                            </div>
-                        </div>
-
-                        <div class="oj-md-odd-cols-3 oj-md-even-cols-3 oj-lg-odd-cols-3 oj-lg-even-cols-3 searchForm">
-                            <div class="oj-row">
-                                <div class="oj-col">
-                                    <label for="payrollid">Payroll ID</label>
-                                    <input id="payrollid" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">
-                                </div>
-                                <!-- End of Col -->
-                                <div class="oj-col">
-                                    <label for="firstname">First Name</label>
-<!--                                    <input id="firstname" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">-->
-                                 <input placeholder="search" id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText'}"/>
-                                </div>
-                                <!-- End of Col -->
-                                <div class="oj-col">
-                                    <label for="lastname">Last Name</label>
-                                    <input id="lastname" data-bind="ojComponent: {component: 'ojInputText', value:'',
-                                                          help: {definition: helpDef()}}">
-                                </div>
-                                <!-- End of Col -->
-                                <div class="oj-col">
-                                    <label for="basicSelect">Single Select </label>
-                                    <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', value: val, rootAttributes: {style:'max-width:20em'}}">
-                                        <option value="IE">Internet Explorer</option>
-                                        <option value="FF">Firefox</option>
-                                        <option value="CH">Chrome</option>
-                                        <option value="OP">Opera</option>
-                                        <option value="SA">Safari</option>
-                                    </select>
-                                </div>
-                                <!-- End of Col -->
-                            </div>
-
-
-                        </div>
-
-                        <div class="oj-md-5 oj-lg-5 oj-xl-5 left">
-                            <div class="checkboxWrapper">
-                                <label id="mainlabelid">STATUS</label>
-                                <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
-                                                      component: 'ojCheckboxset',
-                                                      value: currentStatus}">
-                                    <span class="oj-choice-row">
-                                                          <input id="active" type="checkbox" value="Active">
-                                                          <label for="active">Active</label>
-                                                        </span>
-                                    <span class="oj-choice-row">
-                                                          <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended">
-                                                          <label for="inactivesuspended">Inactive-Suspended</label>
-                                                        </span>
-                                    <span class="oj-choice-row">
-                                                          <input id="inactiveterm" type="checkbox" value="Inactive-Terminated">
-                                                          <label for="inactiveterm">Inactive-Terminated</label>
-                                                        </span>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="oj-md-1 oj-lg-1 oj-xl-1 left">
-                            <div class="divider"></div>
-                        </div>
-                        <div class="oj-md-6 oj-lg-6 oj-xl-6 right">
-                            <div class="checkboxWrapper">
-                                <label id="mainlabelid">MORE OPTIONS</label>
-                                <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
-                                                      component: 'ojCheckboxset',
-                                                      value: currentStatus}">
-                                    <span class="oj-choice-row">
-                                                          <input id="minor" type="checkbox" value="Minor">
-                                                          <label for="minor">Minor</label>
-                                                        </span>
-                                    <span class="oj-choice-row">
-                                                          <input id="termLOA" type="checkbox" value="Included Terminated & LOA Employees">
-                                                          <label for="termLOA">Included Terminated & LOA Employees</label>
-                                                        </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="submitWrapper left">
-                       <!--temporary toggleSection function applied to these buttons, will need to submit form and return results and then clear results-->
-                        <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Search', icons: { start: 'fa fa-search'} }" />
-
-                        <input id="reset" type="reset" data-bind="click: resetData,
-                                                      ojComponent: {component: 'ojButton', label: 'Clear'}" />
-                    </div>
-                </form>
-            </div>
-            <!-- End of Form -->
-           <div class="resultWrapper">
-                <div data-bind="ojComponent: {component: 'ojPagingControl', data: listViewDataSource, pageSize:10}"></div>
-                <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
-                    data: listViewDataSource,
-                    item: {template: 'peoplelist_template'},
-                    selectionMode: 'single',
-                    currentItem: '100',
-                    selection: ['100'],
-                    rootAttributes: {style: 'width:100%;overflow:auto; margin-top: 5px'},
-                    scrollPolicyOptions: {fetchSize: 10}}">
-                </ul>
-
-                <script type="text/html" id="peoplelist_template">
-                    <li data-bind="attr: {id: $data['name']}, click: $parent.empBasicInfoOpen">
-                        <div class="oj-row">
-                            <div class="oj-lg-2 oj-md-2 oj-sm-12 oj-col" style="max-width:70px;padding-bottom:5px">
-                                <img data-bind="attr: {src: $parent.getPhoto($data['empId'])}"/>
-                            </div>
-                            <div class="oj-lg-10 oj-md-10 oj-sm-12 oj-col">
-                                <div class="oj-row row">
-                                    <div class="oj-lg-12 oj-col">
-                                        <span class="header" data-bind="text: firstName + ' ' + lastName"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </script>
-
-            </div>
+<div class="oj-row">
+     <div class="oj-md-12">
+         <div class="searchTitle">
+            <h4>Search Criteria <a href="#">view all employees</a></h4>
         </div>
     </div>
-    <!-- End of Column -->
+    <div class="oj-md-12 oj-lg-8 oj-col">
+        <form data-bind="submit: filteredAllPeople">
+            <div class="oj-row">
+                <div class="oj-md-3 oj-col">
+                    <label for="payrollid">Payroll ID</label>
+                    <input id="payrollid" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">
+                </div>
+                <div class="oj-md-3 oj-col">
+                    <label for="firstname">First Name</label>
+    <!--            <input id="firstname" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">-->
+                    <input placeholder="search" id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText'}"/>
+                </div>
+                <div class="oj-md-3 oj-col">
+                    <label for="lastname">Last Name</label>
+                    <input id="lastname" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">
+                </div>
+                <div class="oj-md-3 oj-col">
+                    <label for="basicSelect">Home Store</label>
+                    <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', value: val, rootAttributes: {style:'max-width:20em'}}">
+                        <option value="IE">Internet Explorer</option>
+                        <option value="FF">Firefox</option>
+                        <option value="CH">Chrome</option>
+                        <option value="OP">Opera</option>
+                        <option value="SA">Safari</option>
+                    </select>
+                </div>
+            </div>
+            <div class="oj-row">
+                 <div class="oj-md-6 oj-col checkboxWrapper">
+                    <label id="mainlabelid">STATUS</label>
+                    <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                          component: 'ojCheckboxset',
+                                          value: currentStatus}">
+                        <span class="oj-choice-row">
+                                              <input id="active" type="checkbox" value="Active">
+                                              <label for="active">Active</label>
+                                            </span>
+                        <span class="oj-choice-row">
+                                              <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended">
+                                              <label for="inactivesuspended">Inactive-Suspended</label>
+                                            </span>
+                        <span class="oj-choice-row">
+                                              <input id="inactiveterm" type="checkbox" value="Inactive-Terminated">
+                                              <label for="inactiveterm">Inactive-Terminated</label>
+                                            </span>
+                    </div>
+                </div>
+                <div class="oj-md-6 oj-col checkboxWrapper">
+                    <label id="mainlabelid">MORE OPTIONS</label>
+                    <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                          component: 'ojCheckboxset',
+                                          value: currentStatus}">
+                        <span class="oj-choice-row">
+                                              <input id="minor" type="checkbox" value="Minor">
+                                              <label for="minor">Minor</label>
+                                            </span>
+                        <span class="oj-choice-row">
+                                              <input id="termLOA" type="checkbox" value="Included Terminated & LOA Employees">
+                                              <label for="termLOA">Included Terminated & LOA Employees</label>
+                                            </span>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="oj-lg-4 oj-col oj-md-only-hide">
+        <h3>Last 30 Day Search </h3>
+        <div class="resultWrapper">
+            <ul data-bind="foreach: resultSearchHistory">
+                <li><div data-bind="text: searchname"></div></li>
+            </ul>
+        </div>
+    </div>
 
-    <div data-bind="template: {name: 'partials/employee-basic-info-modal/employee-basic-info-modal-large'}"></div>
+</div>
+<div class="oj-row">
+    <div class="oj-md-12 oj-col oj-lg-hide">
+        <div id="employee-search-accordion" data-bind="ojComponent: {component: 'ojAccordion'}">
+               <div id="c1">
+                   <span>Last 30 Day Search <span class="fa fa-plus"></span></span>
+            <ul data-bind="foreach: resultSearchHistory">
+                <li><div data-bind="text: searchname"></div></li>
+            </ul>
+               </div>
+        </div>
+    </div>
+</div>
+<div class="oj-row">
+    <div class="oj-md-12 oj-col">
+        <!--temporary toggleSection function applied to these buttons, will need to submit form and return results and then clear results-->
+         <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Search', icons: { start: 'fa fa-search'} }" />
+         <input id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />
+    </div> 
+</div>
+<!-- Start of the Result template -->
+
+<div class="resultWrapper">
+    <div data-bind="ojComponent: {component: 'ojPagingControl', data: listViewDataSource, pageSize:10}"></div>
+    <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
+        data: listViewDataSource,
+        item: {template: 'peoplelist_template'},
+        selectionMode: 'single',
+        currentItem: '100',
+        selection: ['100'],
+        rootAttributes: {style: 'width:100%;overflow:auto; margin-top: 5px'},
+        scrollPolicyOptions: {fetchSize: 10}}">
+    </ul>
+
+    <script type="text/html" id="peoplelist_template">
+        <li data-bind="attr: {id: $data['name']}, click: $parent.empBasicInfoOpen">
+            <a data-bind="click: function(){console.log($parent);}">Parent Check</a>
+            <div class="oj-row">
+                <div class="oj-lg-2 oj-md-2 oj-sm-12 oj-col" style="max-width:70px;padding-bottom:5px">
+                    <img data-bind="attr: {src: $parent.getPhoto($data['empId'])}"/>
+                </div>
+                <div class="oj-lg-10 oj-md-10 oj-sm-12 oj-col">
+                    <div class="oj-row row">
+                        <div class="oj-lg-12 oj-col">
+                            <span class="header" data-bind="text: firstName + ' ' + lastName"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+    </script>
+
+</div>
+
+<!-- Start of Modal for templates -->
+<div data-bind="template: {name: 'partials/employee-basic-info-modal/employee-basic-info-modal-large'}"></div>
