--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -1,16 +1,16 @@
 <div class="oj-row">
-    <div class="oj-col oj-sm-10 oj-lg-10">
+    <div class="oj-col oj-sm-10">
         <h2 id="currentPage" data-bind="text: label"></h2>
     </div>
-    <div class="oj-col oj-sm-2 oj-lg-2 oj-lg-text-align-end">
+    <div class="oj-col oj-sm-2 oj-lg-text-align-end">
         <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>
     </div>
 </div>
 <div class="oj-row">
-    <div class="oj-col oj-lg-6">
+    <div class="oj-col oj-md-6">
         <h3>General</h3>
         <div class="oj-row">
-            <div class="oj-col oj-lg-6">
+            <div class="oj-col oj-md-6">
                 <h4>Name</h4>
                 <span data-bind="text: $parent.firstName()"></span>
                 <span data-bind="text: $parent.lastName()"></span>
@@ -35,7 +35,7 @@
                     <div data-bind="text: $parent.gender()"></div>
                 </div>
             </div>
-            <div class="oj-col oj-lg-6">
+            <div class="oj-col oj-md-6">
 
                 <h4>Profile Picture</h4>
                 <!--Not hooked up to an observable this may need to be an upload feature-->
@@ -61,10 +61,10 @@
             </div>
         </div>
     </div>
-    <div class="oj-col oj-lg-6">
+    <div class="oj-col oj-md-6">
         <h3>Contact</h3>
         <div class="oj-row">
-            <div class="oj-col oj-lg-6">
+            <div class="oj-col oj-md-6">
                 <div>
                     <h4>Email Address</h4>
                     <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a>
@@ -88,7 +88,7 @@
                 <span data-bind="text: $parent.postal()"></span>
                 <span data-bind="text: $parent.country()"></span>
             </div>
-            <div class="oj-col oj-lg-6">
+            <div class="oj-col oj-md-6">
                 <div>
                     <h4>Emergency Contact</h4>
                     <span data-bind="html: $parent.emergencyName()"></span>
@@ -102,10 +102,29 @@
             </div>
         </div>
     </div>
-    <div class="oj-col oj-lg-12">
+    <div class="oj-col oj-md-12">
         <h3>Custom</h3>
+        <div class="oj-col oj-md-6">
+            <a data-bind="click: function(){console.log($parent);}">Find me</a>
+            <div class="textbold">History</div>
+<!--            <div id="barChart" data-bind="ojComponent: {
+                    component: 'ojChart', 
+                    type: 'bar', 
+                    selectionMode: 'none',
+                    dataCursor: 'on',
+                    orientation: 'vertical',
+                    stack: 'off',
+                    series: $parent.barSeriesValue, 
+                    groups: $parent.barGroupsValue, 
+                    animationOnDisplay: 'auto',
+                    animationOnDataChange: 'auto',
+                    hoverBehavior: 'dim'
+                }"
+                 style="max-width:500px;width:100%;height:350px;">
+            </div>-->
+        </div>
     </div>
-    <div class="oj-col oj-lg-12 oj-lg-text-align-end">
+    <div class="oj-col oj-md-12 oj-lg-text-align-end">
          <a data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
     </div>
 </div>
