updated the small timecard tmpl

--- a/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-small.tmpl.html
@@ -50,7 +50,7 @@
         <div class="oj-md-12">
             <div class="oj-row">
                 <div class="oj-sm-6 oj-col shiftPoolDiv">
-                   <a href="#" class="shiftPoolLink">Shift Pool</a>
+                   <a class="shiftPoolLink">Shift Pool</a>
                 </div>
                 <div class="oj-sm-6 oj-col emailAndPringDiv">
                     <ul class="scheduleToolArea">
