Added scroll to top function for when user clicks add new employee button

--- a/OracleJETApplication/templates/add-employee/add-employee-large.tmpl.html
+++ b/OracleJETApplication/templates/add-employee/add-employee-large.tmpl.html
@@ -104,7 +104,7 @@
                                     </li>
                                 </script>
 
-                                <button id="addNewEmployee" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: function(){toggleSection('#newEmpAccordionSection, #searchEmpSection') }, ojComponent: {component: 'ojButton', label: 'Add New Employee ', icons: {end:'oj-fwk-icon-caret-end oj-fwk-icon'}}"></button>
+                                <button id="addNewEmployee" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: function(){toggleSection('#newEmpAccordionSection, #searchEmpSection'), scrollTop() }, ojComponent: {component: 'ojButton', label: 'Add New Employee ', icons: {end:'oj-fwk-icon-caret-end oj-fwk-icon'}}"></button>
                             </div>
                         </div>
                     </div>
