--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1354,7 +1354,9 @@ $navigationListBorderColor:                $lightGray;
     font-family: 'Alta Icon Font';
     src: url("fonts/JetFW_iconfont.woff") format("woff");
 }
-
+a{
+    cursor: pointer;
+}
 .app-header {
     background-color: $headerBgColor;
 }
@@ -1709,6 +1711,9 @@ h3{
     font-weight:normal;
     font-size:13px;
 }
+h4{
+    margin-bottom:0px;
+}
 button#menuButton{
     color: $white;
     &.oj-button{
@@ -1950,7 +1955,36 @@ footer{
     .generalModal-dimensions{
         width:50%;
     }
-    
+    //Profile ToolBar
+    .profileToolBar{
+        width:150px;
+        font-size: 12px;
+        border-left: 1px solid #cccccc;
+        vertical-align: middle;
+        h4{
+            margin-bottom: 0px;
+        }
+        a{
+            font-weight:bold;
+        }
+    }
+    .profileToolBar:nth-child(2){
+        border-left: 0px solid transparent;
+        width:200px;
+    }
+
+    .profileHelpIcon{
+    }
+    //Profile and Tabs
+    .tab-content{
+        padding: 0.8571rem 0;
+    }
+    .noLeftPadding{
+        padding-left:0px;
+    }
+    .leftPadding{
+        padding-left:10px;
+    }
     //Schedule and Timecard
     .futureRow{
         margin-top:20px;
