--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -92,6 +92,7 @@ $white: #fff;
 $black: #000;
 $darkBlue: #0c4a7e;
 $lightBlue: #0572CE;
+$lightTan: #f5f5f5;
 $darkGray: #333333;
 $gray: #666666;
 $lightGray: #cccccc;
@@ -122,7 +123,6 @@ $highlightInputBorderColor: $black;
 // 
 // font family 
 $fontFamily: "Helvetica Neue",
-Helvetica,
 Arial,
 sans-serif;
 // 
@@ -160,8 +160,10 @@ $customsmallmobileFontSize: 1.25em;
 // $headerTextColor:       #252525;    
 // $contrastTextColor:     #ffffff;  
 // $textColorDisabled:     #9e9e9e; 
-$logoText: $white;
-$iconColor: $white;
+$logoText: $black;
+//$iconColor: $white;
+$iconColor: $darkBlue;
+$iconSelectedColor: $white;
 //$tabText: #ffffff;
 $selectedtabText: $darkGray;
 // 
@@ -357,14 +359,14 @@ $panel2BgColor: $gray;
 // like the title bar of a dialog or an accordion header
 $appHeaderMobileBg:        $lightBlue;
 
-$headerBgColor: $darkBlue;
+$headerBgColor: $lightTan;
 $headerNavColorSelected: $lightBlue;
 $headerNavHoverBorder: $borderHoverBottom;
 $headerLogoText: $logoText;
 $headerOffCanvas: $darkGray;
 // $headerBgColorDisabled: $gray;
 // $headerBgImage:         null;
-$headerBGLogo: $imageDir + 'oracle-logo.png';
+$headerBGLogo: $imageDir + 'logo_oracle_sm.png';
 $headerUserIcon: $imageDir + 'vatar_24px.png';
 //IPAD icon text
 $headerNavigationText: $customsmallFontSize;
@@ -834,7 +836,8 @@ $filmStripSubHeaderBg: $lightGray;
 // 
 // NAVIGATIONLIST
 // ---------------------------------------------------------------
-$navigationListHeaderMobileBg:             $darkBlue;
+//$navigationListHeaderMobileBg:             $darkBlue;
+$navigationListHeaderMobileBg:             $lightTan;
 
 $navigationListMobileBg:                   $gray;
 $navigationListMobileBgSelected:           $lightGray;
@@ -1399,6 +1402,13 @@ a{
         &.oj-selected{
             background-color: $tabsBgColorSelected;
             border-width: 0 !important;
+            .oj-navigationlist-item-icon{
+                color:$iconSelectedColor;
+            }
+            a{
+                 color: $white;
+            }
+
         }
         &.oj-hover:not(.oj-selected) {
             background-color: $headerNavColorSelected;
@@ -1411,6 +1421,7 @@ a{
     }
     a.oj-navigationlist-item-content {
         color: $iconColor;
+
     }
 }
 .app-header-mobile-nav-title{
@@ -1715,7 +1726,7 @@ h4{
     margin-bottom:0px;
 }
 button#menuButton{
-    color: $white;
+    color: $black;
     &.oj-button{
         &.oj-hover{
             background-color:transparent;
@@ -2118,6 +2129,7 @@ footer{
     .oj-panel.tab-content{
         padding:0;
     }
+   
     .profileStatusToolArea{
         list-style-type: none;
         padding-left: 0px;
@@ -2204,6 +2216,30 @@ footer{
     .scheduleModal-dimensions{
         width:95%;
     }
+    //Profile ToolBar
+    .profileToolBar{
+        width:150px;
+        font-size: 12px;
+        border-left: 1px solid #cccccc;
+        vertical-align: middle;
+        h4{
+            margin-bottom: 0px;
+        }
+        a{
+            font-weight:bold;
+        }
+    }
+    .profileToolBar:nth-child(2){
+        width:215px;
+    }
+    .profileToolBar:nth-child(4){
+        width:124px;
+    }
+     //Top Icon tool bar
+    .oj-navigationlist-item-label{
+        margin-left:4px;
+    }
+
 }
 
 // LG Desktop (CAP)
